@@ -258,6 +258,7 @@ struct language_entry {
 #define MSG_FORWARDED_MESSAGE_NOTICE             173
 #define MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE    174
 #define MSG_EMPTY_ARCHIVE_NOTICE                 175
+#define MSG_CSS_NORMAL_VIEW                      176
 
 #ifdef MAIN_FILE
 
@@ -458,6 +459,7 @@ char *de[] = {       /* German */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                              /* End Of Message Table - NOWHERE*/
 };
 
@@ -644,6 +646,7 @@ char *pl[] = {                      /* English */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                              /* End Of Message Table      - NOWHERE*/
 };
 
@@ -831,6 +834,7 @@ char *en[] = {       /* English */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                         /* End Of Message Table      - NOWHERE*/
 };
 
@@ -1029,6 +1033,7 @@ char *es[] = {       /* Espanol/Spanish */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */  
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                               /* End Of Message Table */
 };
 
@@ -1218,6 +1223,7 @@ char *pt[] = {                     /* Brazilian Portuguese */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                                /* End Of Message Table      - NOWHERE*/
 };
 
@@ -1403,6 +1409,7 @@ char *fi[] = {       /* Finnish */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                              /* End Of Message Table      - NOWHERE*/
 };
 
@@ -1591,6 +1598,7 @@ char *it[] = {       /* Italian */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                          /* End Of Message Table      - NOWHERE*/
 };
 
@@ -1778,6 +1786,7 @@ char *fr[] = {       /* French */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                                    /* End Of Message Table  - NOWHERE*/
 };
 
@@ -1967,6 +1976,7 @@ char *is[] = {       /* Icelandic */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                               /* End Of Message Table      - NOWHERE*/
 };
 
@@ -2159,6 +2169,7 @@ char *sv[] = {
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                             /* End Of Message Table    - NOWHERE*/
 };
 
@@ -2351,6 +2362,7 @@ char *no[] = {
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                             /* End Of Message Table    - NOWHERE*/
 };
 
@@ -2544,6 +2556,7 @@ char *gr[] = {       /* Greek */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                           	/* End Of Message Table - NOWHERE*/
 };
 
@@ -2729,6 +2742,7 @@ char *ru[] = {     /* Russian */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
   "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
+  "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                          /* End Of Message Table      - NOWHERE*/
 };
 
